--- a/src/components/ContactCTA.astro
+++ b/src/components/ContactCTA.astro
@@ -4,9 +4,9 @@ import Icon from './Icon.astro';
 ---
 
 <aside>
-	<h2>Interested in working together?</h2>
-	<CallToAction href="mailto:me@example.com">
-		Send Me a Message
+	<h2>Contact Info ?</h2>
+	<CallToAction href="https://many.link/dt">
+		Here
 		<Icon icon="paper-plane-tilt" size="1.2em" />
 	</CallToAction>
 </aside>
