--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,16 +1,18 @@
 ---
 interface Props {
 	title: string;
+	name?: string;
 	tagline?: string;
 	align?: 'start' | 'center';
 }
 
-const { align = 'center', tagline, title } = Astro.props;
+const { align = 'center', tagline, title, name } = Astro.props;
 ---
 
 <div class:list={['hero stack gap-4', align]}>
 	<div class="stack gap-2">
 		<h1 class="title">{title}</h1>
+		{name && <h2 class="name">{name}</h2>}
 		{tagline && <p class="tagline">{tagline}</p>}
 	</div>
 	<slot />
@@ -21,7 +23,9 @@ const { align = 'center', tagline, title } = Astro.props;
 		font-size: var(--text-lg);
 		text-align: center;
 	}
-
+	.name {
+		font-size: var(--text-3xl);
+	}
 	.title,
 	.tagline {
 		max-width: 37ch;
