--- a/src/pages/work/[...slug].astro
+++ b/src/pages/work/[...slug].astro
@@ -22,7 +22,7 @@ export async function getStaticPaths() {
 		props: { entry },
 	}));
 }
-
+export const prerender = true;
 const { entry } = Astro.props;
 const { Content } = await entry.render();
 ---
