--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,9 +30,9 @@ const projects = (await getCollection('work'))
 		<div class="wrapper stack gap-8 lg:gap-20">
 			<header class="hero">
 				<Hero
-					title="Hello, I am"
+					title="Hello, I'm"
 					name="Nguyễn Dương Tuấn"
-					tagline="I am a Developer and Student. I love coding and learning new things."
+					tagline="I'm a Developer and Student. I love coding and learning new things."
 					align="start"
 				>
 					<div class="roles">
