update add links page and remove many links

--- a/src/components/ContactCTA.astro
+++ b/src/components/ContactCTA.astro
@@ -5,7 +5,7 @@ import Icon from './Icon.astro';
 
 <aside>
 	<h2>Contact Info ?</h2>
-	<CallToAction href="https://many.link/dt">
+	<CallToAction href="/links/">
 		Here
 		<Icon icon="paper-plane-tilt" size="1.2em" />
 	</CallToAction>
