--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,7 +11,7 @@ const currentYear = new Date().getFullYear();
 		<a href="https://github.com/thedtvn"> GitHub</a>
 		<a href="https://discord.com/users/542602170080428063"> Discord</a>
 		<a href="mailto:duongtuan30306@gmail.com"> Email</a>
-		<a href="https://many.link/dt"> More</a>
+		<a href="/links/"> More</a>
 	</p>
 </footer>
 <style>
