--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -7,6 +7,7 @@ import type { iconPaths } from './IconPaths';
 const textLinks: { label: string; href: string }[] = [
 	{ label: 'Home', href: '/' },
 	{ label: 'Work', href: '/work/' },
+	{ label: 'Social Links', href: '/links/' },
 	{ label: 'About', href: '/about/' },
 ];
 
@@ -14,7 +15,7 @@ const textLinks: { label: string; href: string }[] = [
 const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[] = [
 	{ label: 'Discord', href: 'https://discord.com/users/542602170080428063', icon: 'discord-logo' },
 	{ label: 'GitHub', href: 'https://github.com/thedtvn', icon: 'github-logo' },
-	{ label: 'More', href: 'https://many.link/dt', icon: 'info-icon' },
+	{ label: 'More', href: '/links/', icon: 'info-icon' },
 ];
 ---
 
